fix long titles not showing right

--- a/src/app/styl/views/show_detail.styl
+++ b/src/app/styl/views/show_detail.styl
@@ -481,7 +481,7 @@
 					font-weight 100
 					padding-left 34px
 					display inline-block
-					max-width 80%
+					max-width 79%
 					overflow hidden
 					white-space nowrap
 					text-overflow ellipsis
